board and square components added

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@ initial-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link rel="icon" href="favicon.png" type="image/png">
   </head>
   <body>
     <section id="root"></section>
